vemo-app/main/default/objects/StewardshipACHBatchDetail__c/StewardshipACHBatchDetail__c.object-meta.xml
<CustomObject>
    <label>Stewardship ACH Batch Detail</label>
    <nameField>
        <displayFormat>SACHBD-{000000000}</displayFormat>
        <label>Stewardship ACH Batch Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stewardship ACH Batch Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>