vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/AccountGUID__c.field-meta.xml
<CustomField>
    <fullName>AccountGUID__c</fullName>
    <label>AccountGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>