vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/AccountScheduleGUID__c.field-meta.xml
<CustomField>
    <fullName>AccountScheduleGUID__c</fullName>
    <externalId>true</externalId>
    <label>AccountScheduleGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>