vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/AmountFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountFormula__c</fullName>
    <formula>PaymentInstruction__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>