vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <formula>Text(StewardshipACHBatch__r.BankAccount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account</label>
    <type>Text</type>
</CustomField>