vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/BatchGUID__c.field-meta.xml
<CustomField>
    <fullName>BatchGUID__c</fullName>
    <label>BatchGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>