vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/BatchGUIDFormula__c.field-meta.xml
<CustomField>
    <fullName>BatchGUIDFormula__c</fullName>
    <formula>StewardshipACHBatch__r.BatchGUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BatchGUIDFormula</label>
    <type>Text</type>
</CustomField>