vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/BatchType__c.field-meta.xml
<CustomField>
    <fullName>BatchType__c</fullName>
    <formula>TEXT(StewardshipACHBatch__r.BatchType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Type</label>
    <type>Text</type>
</CustomField>