vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/CompanyEntryDescription__c.field-meta.xml
<CustomField>
    <fullName>CompanyEntryDescription__c</fullName>
    <label>CompanyEntryDescription</label>
    <length>10</length>
    <type>Text</type>
</CustomField>