vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/DisbursementAccountGUIDFormula__c.field-meta.xml
<CustomField>
    <fullName>DisbursementAccountGUIDFormula__c</fullName>
    <formula>PaymentMethod__r.StewardshipDisbursementAccountGUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisbursementAccountGUIDFormula</label>
    <type>Text</type>
</CustomField>