vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/DisbursementDonorGUIDFormula__c.field-meta.xml
<CustomField>
    <fullName>DisbursementDonorGUIDFormula__c</fullName>
    <formula>Account__r.StewardshipDisbursementDonorGUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisbursementDonorGUIDFormula</label>
    <type>Text</type>
</CustomField>