vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/DonorGUID__c.field-meta.xml
<CustomField>
    <fullName>DonorGUID__c</fullName>
    <label>DonorGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>