vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/IsRefunded__c.field-meta.xml
<CustomField>
    <fullName>IsRefunded__c</fullName>
    <description>IsRefunded from Stewardship</description>
    <inlineHelpText>IsRefunded from Stewardship</inlineHelpText>
    <label>IsRefunded</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>