vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/PaymentAccountGUIDFormula__c.field-meta.xml
<CustomField>
    <fullName>PaymentAccountGUIDFormula__c</fullName>
    <formula>PaymentMethod__r.StewardshipPaymentAccountGUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PaymentAccountGUIDFormula</label>
    <type>Text</type>
</CustomField>