vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/PaymentBatchSelectResponse__c.field-meta.xml
<CustomField>
    <fullName>PaymentBatchSelectResponse__c</fullName>
    <label>PaymentBatchSelectResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>