vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/PaymentDonorGUIDFormula__c.field-meta.xml
<CustomField>
    <fullName>PaymentDonorGUIDFormula__c</fullName>
    <formula>Account__r.StewardshipPaymentDonorGUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PaymentDonorGUIDFormula</label>
    <type>Text</type>
</CustomField>