vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/PaymentInstruction__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Instruction</label>
    <referenceTo>PaymentInstruction__c</referenceTo>
    <relationshipLabel>Stewardship ACH Batch Details</relationshipLabel>
    <relationshipName>Stewardship_ACH_Batch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>