vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipName>Stewardship_ACH_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>