vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/RecurringType__c.field-meta.xml
<CustomField>
    <fullName>RecurringType__c</fullName>
    <label>Recurring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - One Time Non Recurring</fullName>
                <default>true</default>
                <label>1 - One Time Non Recurring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>