vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/RefundDate__c.field-meta.xml
<CustomField>
    <fullName>RefundDate__c</fullName>
    <description>RefundDate from Stewardship</description>
    <inlineHelpText>RefundDate from Stewardship</inlineHelpText>
    <label>RefundDate</label>
    <type>DateTime</type>
</CustomField>