vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <description>ReturnDate from Stewardship</description>
    <inlineHelpText>ReturnDate from Stewardship</inlineHelpText>
    <label>ReturnDate</label>
    <type>DateTime</type>
</CustomField>