vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/StewardshipACHBatch__c.field-meta.xml
<CustomField>
    <fullName>StewardshipACHBatch__c</fullName>
    <label>Stewardship ACH Batch</label>
    <referenceTo>StewardshipACHBatch__c</referenceTo>
    <relationshipLabel>Stewardship ACH Batch Details</relationshipLabel>
    <relationshipName>Stewardship_ACH_Batch_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>