vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/StewardshipProcess__c.field-meta.xml
<CustomField>
    <fullName>StewardshipProcess__c</fullName>
    <label>Stewardship Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreateTransaction</fullName>
            </value>
            <value>
                <fullName>CreateCreditTransaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>