vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/StewardshipStatus__c.field-meta.xml
<CustomField>
    <fullName>StewardshipStatus__c</fullName>
    <label>Stewardship Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>