vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/TransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>TransactionAmount__c</fullName>
    <description>TransactionAmount returned from Stewardship</description>
    <inlineHelpText>TransactionAmount returned from Stewardship</inlineHelpText>
    <label>TransactionAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>