vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>TransactionDate returned from Stewardship</description>
    <inlineHelpText>TransactionDate returned from Stewardship</inlineHelpText>
    <label>TransactionDate</label>
    <type>DateTime</type>
</CustomField>