vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/TransactionGUID__c.field-meta.xml
<CustomField>
    <fullName>TransactionGUID__c</fullName>
    <label>TransactionGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>