vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <inlineHelpText>C – Cleared
B - Bounced or returned
P – Processing</inlineHelpText>
    <label>TransactionStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>