vemo-app/main/default/objects/StewardshipACHBatchDetail__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment (Incoming Money)</fullName>
            </value>
            <value>
                <fullName>Credit (Outgoing Money)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>