vemo-app/main/default/objects/StewardshipACHBatchDetail__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>StewardshipACHBatch__c</columns>
    <columns>Account__c</columns>
    <columns>AccountScheduleGUID__c</columns>
    <columns>Status__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>StewardshipProcess__c</columns>
    <columns>StewardshipStatus__c</columns>
    <columns>TransactionStatus__c</columns>
    <columns>TransactionType__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>PaymentInstruction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TransactionStatus__c</field>
        <operation>notEqual</operation>
        <value>C,B</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Batch Cancelled</value>
    </filters>
    <label>Open</label>
</ListView>